<resources>
    <string name="app_name">ChildTracker</string>
    <string name="mapbox_access_token">pk.eyJ1IjoidmFkaW1iZXMiLCJhIjoiY2tocnNvY3BuMGRkdDJxbGhzNXFqbTZqdiJ9.Yk_bFWcZ1zbkEvqSdUof5g</string>
    <string name="toggle_straight_line_drawing">Включить\Выключить рисование</string>
    <string name="clear_map">Очистить карту для рисования</string>
    <string name="toggle_search_data_points_title">Прекратить\Запустить отслеживание</string>
    <string name="now_drawing">Now drawing %1$s</string>
    <string name="single_line">single line</string>
    <string name="polygon">polygon</string>
    <string name="search_result_size">Move map around to explore the %1$d locations in the drawn search area</string>
    <string name="move_map_drawn_line">Move map around to explore your drawn line</string>
    <string name="draw_instruction">Move your finger on the map to draw a search area</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="new_location">New lat: %1$s New longitude: %2$s</string>
    <string name="form_username">E-mail</string>
    <string name="password">Пароль</string>
    <string name="text_login">Войти</string>
    <string name="text_register">Регистрация</string>
    <string name="text_parent">Родитель</string>
    <string name="text_child">Ребенок</string>
    <string name="your_name">Ваше имя</string>
    <string name="save_text">Сохранить</string>
    <string name="hint_child_id">Введите ID ребенка</string>
    <string name="hint_add">Добавить</string>
    <string name="name_child">Имя ребенка: </string>
    <string name="exit">Выход</string>
    <string name="Name">Имя</string>
    <string name="Phone">Телефон</string>
</resources>